# Chess-Engine-Rust

./: .gitignore  Cargo.toml  build_debug.sh  env.example  readme.md
src/: constants.rs  debugging.rs  lichess.rs  main.rs  minimax.rs
