[package]
name = "rust_chess_engine"
version = "0.1.0"
edition = "2021"
authors = ["Samuel Henderson"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pleco = "0.5.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
hyper = "0.14.23"
serde_json = "1.0.97"
